# class-GNE

./: .gitignore  README.md  bad_file1.py  bad_file2.py  bad_file3.py  config.yaml  data_types.yaml  devices.py  forgot.py  invalid.py  ip_addresses.txt  my_file.py  my_routers.yml  myexample2.py  myexample3.py  myprogram.py  myprogram1.py  netmiko_conn.py  octets.py  pyproject.toml  requirements.txt  router_simple.yml  show_run.py  sites.yaml  sites2.yaml
.github/workflows/: basic_tests.yml  cache-1.yml  cache.yml  conditional.yml  env_vars.yml  linting.yml  matrix-1.yml  matrix-testing.yml  pip-install-deps-1.yml  pip-install-deps-2.yml  pip-install-deps.yml  poetry-install-deps.yml  poetry-install-deps2.yml  secrets.yml  steps.yml  test1.yml  tests.yml
bad_dir/: my_broken_code.py
tests/: conftest.py  test_simple.py  test_suite.sh
