[tool.poetry]
name = "gne"
version = "0.1.0"
description = "Git for Network Engineers' Course"
authors = ["Kirk Byers <ktbyers@twb-tech.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/twin-bridges/gne"
classifiers = [
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8"
rich = "13.7.0"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
pytest = "7.1.2"
pylama = "8.3.8"
